--- a/main.css
+++ b/main.css
@@ -12,6 +12,9 @@ body {
    position: fixed;
    bottom: 20px;
    left: 20px;
+   background: white;
+   border: 2px solid black;
+   animation: rainbow .3s infinite;
  }
  
  * {
@@ -70,3 +73,17 @@ body {
    height: 100px;
    width: 100px;
  }
+
+ @keyframes rainbow {
+  0% {background: #ff0000;}
+  10% {background: #ff8000;}
+  20% {background: #ffff00;}
+  30% {background: #80ff00;}
+  40% {background: #00ff00;}
+  50% {background: #00ff80;}
+  60% {background: #00ffff;}
+  70% {background: #0080ff;}
+  80% {background: #0000ff;}
+  90% {background: #8000ff;}
+  100% {background: #ff0080;}
+  }
