--- a/main.css
+++ b/main.css
@@ -1,89 +1,129 @@
 body {
   background-color: #cccccc;
- }
- 
- .text-center {
-   text-align: center;
- }
- 
- .kills {
-   font-size: 25px;
-   font-weight: bold;
-   position: fixed;
-   bottom: 20px;
-   left: 20px;
-   background: white;
-   border: 2px solid black;
-   animation: rainbow .3s infinite;
- }
- 
- * {
-   z-index: 1;
- }
- 
- .rifle {
-   cursor: url('img/rifle.png'), auto;
-   z-index: 0;
- }
- 
- .center {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   width: 50%;
-   height: 23em;
-   width: 22em;
- 
- }
- 
- .catalart {
-   width: 300px;
-   height: 300px;
- }
- 
- .center2 {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   width: 50%;
-   text-align: center;
- }
- 
- .whitebg {
-   background-color: rgba(255,255,255,0.8);
- }
- 
- #footer {
-  font-family: sans-serif;
- }
- 
- .font {
-  font-family: sans-serif;
- }
- 
- #heart {
-   color: red;
- }
- 
- .under-construction {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   width: 50%;
-   height: 100px;
-   width: 100px;
- }
+}
 
- @keyframes rainbow {
-  0% {background: #ff0000;}
-  10% {background: #ff8000;}
-  20% {background: #ffff00;}
-  30% {background: #80ff00;}
-  40% {background: #00ff00;}
-  50% {background: #00ff80;}
-  60% {background: #00ffff;}
-  70% {background: #0080ff;}
-  80% {background: #0000ff;}
-  90% {background: #8000ff;}
-  100% {background: #ff0080;}
+.text-center {
+  text-align: center;
+}
+
+.kills {
+  font-size: 25px;
+  font-weight: bold;
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: white;
+  border: 2px solid black;
+  animation: rainbow 0.3s infinite;
+  padding: 5px;
+  display: none;
+}
+
+.modes {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.modes button {
+  display: block;
+  margin: 10px;
+  cursor: pointer;
+}
+
+* {
+  z-index: 1;
+}
+
+.rifle {
+  cursor: url("img/rifle.png"), auto;
+  z-index: 0;
+}
+
+.lidl {
+  cursor: url("img/lidl.png"), auto;
+  z-index: 0;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 23em;
+  width: 22em;
+}
+
+.catalart {
+  width: 300px;
+  height: 300px;
+}
+
+.center2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  text-align: center;
+}
+
+.whitebg {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+#footer {
+  font-family: sans-serif;
+}
+
+.font {
+  font-family: sans-serif;
+}
+
+#heart {
+  color: red;
+}
+
+.under-construction {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 100px;
+  width: 100px;
+}
+
+@keyframes rainbow {
+  0% {
+    background: #ff0000;
   }
+  10% {
+    background: #ff8000;
+  }
+  20% {
+    background: #ffff00;
+  }
+  30% {
+    background: #80ff00;
+  }
+  40% {
+    background: #00ff00;
+  }
+  50% {
+    background: #00ff80;
+  }
+  60% {
+    background: #00ffff;
+  }
+  70% {
+    background: #0080ff;
+  }
+  80% {
+    background: #0000ff;
+  }
+  90% {
+    background: #8000ff;
+  }
+  100% {
+    background: #ff0080;
+  }
+}
